--- a/public/app/game/templates/game.html
+++ b/public/app/game/templates/game.html
@@ -200,7 +200,7 @@
          modal-close-bg>
         <div class="app-modal__dialog">
             <div class="app-modal__content">
-                <h4 class="app-modal__title">{{ player2.name }} {{ 'offers_a_draw'|translate }} ?</h4>
+                <h4 class="app-modal__title">{{ player2.name }} {{ 'offers_a_draw'|translate }}</h4>
                 <div class="app-modal__actions">
                     <button modal-close 
                             type="reset" 
