--- a/public/index.ejs
+++ b/public/index.ejs
@@ -54,7 +54,7 @@
                 <div class="app-modal__logo">
                     <span class="app-logo">
                         <span class="app-logo__icon"></span>
-                        <span class="app-logo__text" ng-bind="'title'|translate"></span>
+                        <span class="app-logo__text" ng-bind="'name'|translate"></span>
                     </span>
                 </div>
                 <div class="app-login__content-button">
@@ -79,13 +79,16 @@
             </div>
         </div>
 
-        <div class="app-layout mdl-layout mdl-js-layout mdl-layout--fixed-header" ng-show="!loading" ng-class="{'is-user-game': user.gid, 'is-game': isGame }">
+        <div class="app-layout mdl-layout mdl-js-layout mdl-layout--fixed-header" 
+             ng-show="!loading" 
+             ng-class="{'is-user-game': user.gid, 'is-game': isGame }">
+             
             <header class="app-header mdl-layout__header">
                 <div class="app-header__row mdl-layout__header-row">
                     <span class="app-title mdl-layout-title">
                         <span class="app-logo">
                             <span class="app-logo__icon"></span>
-                            <span class="app-logo__text" ng-bind="'title'|translate"></span>
+                            <span class="app-logo__text" ng-bind="'name'|translate"></span>
                         </span>
                     </span>
                     <!-- Add spacer, to align navigation to the right in desktop -->
@@ -111,7 +114,7 @@
                     <span class="app-mobile__title mdl-layout-title">
                         <span class="app-logo">
                             <span class="app-logo__icon"></span>
-                            <span class="app-logo__text" ng-bind="'title'|translate"></span>
+                            <span class="app-logo__text" ng-bind="'name'|translate"></span>
                         </span>
                     </span>
                 </div>
@@ -122,7 +125,7 @@
                 <span class="app-layout-title mdl-layout-title">
                     <span class="app-logo">
                         <span class="app-logo__icon"></span>
-                        <span class="app-logo__text" ng-bind="'title'|translate"></span>
+                        <span class="app-logo__text" ng-bind="'name'|translate"></span>
                     </span>
                 </span>
                 <nav class="mdl-navigation">
