Change title meta

--- a/public/index.ejs
+++ b/public/index.ejs
@@ -24,7 +24,7 @@
 
         <base href="/">
         
-        <title ng-bind="'title'|translate"><%= title %></title>
+        <title><%= title %> - World of Chess</title>
 
         <link rel="shortcut icon" href="/images/favicon.ico">
 
