--- a/public/app/game/templates/game.html
+++ b/public/app/game/templates/game.html
@@ -27,7 +27,7 @@
 </div>
 
 <div class="mdl-shadow--2dp mdl-cell mdl-cell--12-col" ng-if="isPlayer()">
-    <table class="app-table app-table--game-actions">
+    <table class="app-table app-table--game app-table--game-actions">
         <tbody>
             <tr>
                 <td>
@@ -57,7 +57,7 @@
 </div>
 
 <div ng-if="game" class="mdl-shadow--2dp mdl-cell mdl-cell--12-col">
-    <table class="app-table app-table--game mdl-data-table mdl-js-data-table">
+    <table class="app-table app-table--game app-table--game-stats mdl-data-table mdl-js-data-table">
         <thead>
             <tr>
                 <th></th>
