--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1495,24 +1495,28 @@ a {
   padding: 0 20px;
 }
 
+.app-table--game-actions tr:last-of-type td,
+.app-table--game-stats tr:last-of-type td {
+  border-bottom: 0;
+}
+
 .app-table--game-actions {
   width: 100%;
   border-collapse: collapse;
-  border-bottom: 1px solid rgba(0,0,0,.12);
 }
 
-.app-table--game-actions tr td {
+.app-table--game-actions tbody tr td {
   border-right: 1px solid rgba(0,0,0,.12);
   text-align: center;
   padding:  0;
 }
 
-.app-table--game-actions tr td:first-of-type,
-.app-table--game-actions tr td:last-of-type {
+.app-table--game-actions tbody tr td:first-of-type,
+.app-table--game-actions tbody tr td:last-of-type {
   padding: 0;
 }
 
-.app-table--game-actions tr td:last-of-type {
+.app-table--game-actions tbody tr td:last-of-type {
   border-right: 0;
 }
 
@@ -1600,11 +1604,11 @@ a {
   }
 
   .app-game__toggle--played {
-    right: 15px;
+    right: 0;
   }
 
   .app-game__toggle--messages {
-    left: 15px;
+    left: 0;
   }
 
   .app-footer {
@@ -1732,8 +1736,8 @@ a {
 
 @media screen and (min-width: 600px) and (max-width: 1024px) {
   .app-layout.is-game .app-footer {
-    padding-top: 4px;
-    padding-bottom: 56px;
+    padding-top: 12px;
+    padding-bottom: 50px;
   }
 }
 
@@ -1743,7 +1747,7 @@ a {
   }
 
   .app-game__toggle--messages {
-    width: calc(45% - 20px);
+    width: calc(45% - 5px);
   }
 
   .app-table--game-played-index {
@@ -1795,6 +1799,25 @@ a {
 
   .app-table--game-played tbody tr td {
     padding: 0 10px;
+  }
+
+  .app-layout.is-game .app-header {
+    box-shadow: none;
+  }
+
+  .app-layout.is-game .app-grid {
+    padding: 0;
+  }
+
+  .app-layout.is-game .mdl-cell {
+    margin: 0;
+    width: 100%;
+    box-shadow: none;
+    border-bottom: 1px solid rgba(0, 0, 0, .12);
+  }
+
+  .app-table--game {
+    border: 0;
   }
 }
 
@@ -1854,8 +1877,10 @@ a {
 
   .app-game__toggle {
     display: none;
-    right: 15px;
-    left: 15px;
+    right: 0;
+    left: 0;
+    border-right: 0;
+    border-left: 0;
     width: auto;
   }
 
@@ -1865,6 +1890,10 @@ a {
 
   .app-game__toggle--phone {
     display: initial;
+  }
+
+  .app-game__toggle--messages {
+    top: 0;
   }
 
   .app-game__toggle-head--phone {
@@ -1946,6 +1975,11 @@ a {
     width: 300px;
     text-align: center;
   }
+
+  .app-layout.is-game .app-footer {
+    padding-top: 6px;
+    padding-bottom: 45px;
+  }
 }
 
 @media screen and (max-width: 479px) {
@@ -1967,11 +2001,10 @@ a {
   }
 
   .app-head .app-button__create-game {
-    position: relative;
-    right: auto;
-    top: auto;
-    margin-top: 20px;
-    margin-bottom: -10px;
+    position: fixed;
+    right: 16px;
+    bottom: 8px;
+    z-index: 9;
   }
 
   .app-table {
