--- a/public/index.ejs
+++ b/public/index.ejs
@@ -81,7 +81,7 @@
 
         <div class="app-layout mdl-layout mdl-js-layout mdl-layout--fixed-header" 
              ng-show="!loading" 
-             ng-class="{'is-user-game': user.gid, 'is-game': isGame }">
+             ng-class="{'is-user-game': user.gid, 'is-game': isGame, 'is-toggle': isToggle }">
              
             <header class="app-header mdl-layout__header">
                 <div class="app-header__row mdl-layout__header-row">
