--- a/public/app/game/templates/game.html
+++ b/public/app/game/templates/game.html
@@ -32,21 +32,21 @@
             <tr>
                 <td>
                     <button ng-disabled="!possibleResign()"
-                            show-modal="modal-resign" 
+                            show-modal="#modal-resign" 
                             class="app-button mdl-button mdl-js-button">
                             {{ 'resign'|translate }}
                     </button>
                 </td>
                 <td>
                     <button ng-disabled="!possibleOfferDraw()"
-                            show-modal="modal-offer-draw" 
+                            show-modal="#modal-offer-draw" 
                             class="app-button mdl-button mdl-js-button">
                             {{ 'offer_draw'|translate }}
                     </button>
                 </td>
                 <td>
                     <button ng-disabled="!possibleDraw()"
-                            show-modal="modal-possible-draw" 
+                            show-modal="#modal-possible-draw" 
                             class="app-button mdl-button mdl-js-button">
                             {{ 'draw'|translate }}
                     </button>
