--- a/public/index.ejs
+++ b/public/index.ejs
@@ -54,6 +54,7 @@
 
         <modal-profile></modal-profile>
         <modal-trophy></modal-trophy>
+        <modal-create-game></modal-create-game>
 
         <div id="modal-connect" 
              class="app-modal app-modal__bg" 
