fix create game

--- a/public/app/home/templates/home.html
+++ b/public/app/home/templates/home.html
@@ -18,7 +18,7 @@
         </div>
     </div>
     <div class="app-button__create-game">
-        <button create-game
+        <button show-modal="#modal-create-game"
                 class="mdl-button mdl-button--colored mdl-button--raised mdl-js-button mdl-js-ripple-effect">
             {{ 'create_game' | translate }}
         </button>
