--- a/public/app/home/templates/home.html
+++ b/public/app/home/templates/home.html
@@ -22,6 +22,10 @@
                 class="mdl-button mdl-button--colored mdl-button--raised mdl-js-button mdl-js-ripple-effect">
             {{ 'create_game' | translate }}
         </button>
+        <button show-modal="#modal-create-game" show-modal-data="{ loadGame: true }"
+                class="mdl-button mdl-button--colored mdl-button--raised mdl-js-button mdl-js-ripple-effect">
+            {{ 'create_game' | translate }}
+        </button>
     </div>
 </div>
 
